k8s/db.yml
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-db
  namespace: petclinic
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: petclinic-db
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-db
  namespace: petclinic
  labels:
    app: petclinic-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-db
  template:
    metadata:
      labels:
        app: petclinic-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 10
            periodSeconds: 5
